--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    
+  </style>
 <body>
 <h1>Chips</h1>
 <h2> Alles wat je wil weten over chips</h2>
-<p> Dit wordt vervangen door info over chips</p>
+<p>Hoe word chips gemaakt</p>
 <body>
 <html>
