--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
   <style>
+    h1 {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+ body {
+   text-align: center;
+   background: black;
+   color: white;
+   font-family: helvetica;
+ }
   </style>
 <body>
 <h1>Chips</h1>
 <h2> Alles wat je wil weten over chips</h2>
-<p>Hoe word chips gemaakt</p>
+<h3>Hoe word chips gemaakt</h3>
 <body>
 <html>
