--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {
 }
  body {
    text-align: center;
-   background: green;
+   background: white;
    color: white;
    font-family: helvetica;
  }
