--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ p {
  body {
    text-align: center;
    background: white;
-   color: white;
+   color: black;
    font-family: helvetica;
  }
   </style>
