--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@ p {
 <h1>Chips</h1>
 <h2> Alles wat je wil weten over chips</h2>
 <h3>Hoe word chips gemaakt</h3>
+<h3> smaken chips</h3>
 <body>
 <html>
