--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@ p {
 <h2> Alles wat je wil weten over chips</h2>
 <h3>Hoe word chips gemaakt</h3>
 <h3> smaken chips</h3>
+  <p> Naturel<p>
 <body>
 <html>
