--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ p {
 <h2> Alles wat je wil weten over chips</h2>
 <h3>Hoe word chips gemaakt</h3>
 <h3> smaken chips</h3>
-  <p> Naturel<p>
+  <h6> Naturel<h6>
+    <p>de meest gegeten smaak, maar ook niet  echt iets bijzonders<p>
 <body>
 <html>
