--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {
 }
  body {
    text-align: center;
-   background: white;
+   background: yellow;
    color: black;
    font-family: helvetica;
  }
