--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ p {
 <h1>Chips</h1>
 <h2> Alles wat je wil weten over chips</h2>
 <h3>Hoe word chips gemaakt</h3>
+ <p>De eenvoudigste manier om chips te maken, is door aardappelen in schijfjes te snijden, en die schijfjes te bakken of te frituren. De aardappelen kunnen van tevoren licht voorgekookt zijn. Na het bakken kunnen ze met wat zout geconsumeerd worden.</p>
 <h3> smaken chips</h3>
  <h4> Naturel</h4>
  <p>de meest gegeten smaak, maar ook niet  echt iets bijzonders</p>
