--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@ p {
  <p>De eenvoudigste manier om chips te maken, is door aardappelen in schijfjes te snijden, en die schijfjes te bakken of te frituren. De aardappelen kunnen van tevoren licht voorgekookt zijn. Na het bakken kunnen ze met wat zout geconsumeerd worden.</p>
 <h3> smaken chips</h3>
  <h4> Naturel</h4>
- <p>de meest gegeten smaak, maar ook niet  echt iets bijzonders</p>
+ <p>De meest gegeten smaak chips ter wereld, maar ook niet  echt iets bijzonders</p>
+  <h4>paprika</h4>
+  <p> nederderlanders eten de meeste paprika chips van alle landen<p>
+  <img src="https://www.w3schools.com/tags/img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
   
 <body>
 <html>
