--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {
 }
  body {
    text-align: center;
-   background: yellow;
+   background: https://www.google.com/url?sa=i&url=https%3A%2F%2Fnl.wikipedia.org%2Fwiki%2FAardappelchips&psig=AOvVaw2Gp_lofosjAUr6nd_FQFK4&ust=1624353746566000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCNDouLOzqPECFQAAAAAdAAAAABAD;
    color: black;
    font-family: helvetica;
  }
@@ -25,5 +25,6 @@ p {
  <p>De meest gegeten smaak chips ter wereld, maar ook niet  echt iets bijzonders</p>
   <h4>paprika</h4>
   <p> nederderlanders eten de meeste paprika chips van alle landen<p>
+  
 <body>
 <html>
