--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {
 }
  body {
    text-align: center;
-   background: https://www.google.com/url?sa=i&url=https%3A%2F%2Fnl.wikipedia.org%2Fwiki%2FAardappelchips&psig=AOvVaw2Gp_lofosjAUr6nd_FQFK4&ust=1624353746566000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCNDouLOzqPECFQAAAAAdAAAAABAD;
+   background: https://commons.wikimedia.org/wiki/File:Potato-Chips.jpg   
    color: black;
    font-family: helvetica;
  }
