--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {
 }
  body {
    text-align: center;
-   background: https://commons.wikimedia.org/wiki/File:Potato-Chips.jpg   
+   background: url("/https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg");
    color: black;
    font-family: helvetica;
  }
@@ -25,6 +25,7 @@ p {
  <p>De meest gegeten smaak chips ter wereld, maar ook niet  echt iets bijzonders</p>
   <h4>paprika</h4>
   <p> nederderlanders eten de meeste paprika chips van alle landen<p>
-  
+  <h4> bolognese</h4>
+  <p>
 <body>
 <html>
