--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@ p {
 }
  body {
    text-align: center;
-   background: <img src ="/https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg">;
+   background: <img src ="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg">;
    color: black;
    font-family: helvetica;
  }
   </style>
 <body>
+  <header>
 <h1>Chips</h1>
 <h2> Alles wat je wil weten over chips</h2>
 <h3>Hoe word chips gemaakt</h3>
@@ -23,11 +24,13 @@ p {
 <h3> smaken chips</h3>
   <ul>
     <li><a href="#">Smaken Chips</a></li>
+   </ul>
  <h4> Naturel</h4>
  <p>De meest gegeten smaak chips ter wereld, maar ook niet  echt iets bijzonders</p>
   <h4>paprika</h4>
   <p> nederderlanders eten de meeste paprika chips van alle landen<p>
   <h4> bolognese</h4>
   <p>
+    
 <body>
 <html>
