--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p {
 }
  body {
    text-align: center;
-   background: <img src ="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg">;
+   <div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');">
    color: black;
    font-family: helvetica;
  }
