--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     h1 {
   text-align: center;
 }
+    div {
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');
+}
 
 p {
   text-align: center;
 }
  body {
    text-align: center;
-   <div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');">
+   
    color: black;
    font-family: helvetica;
  }
