--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ p {
  }
   </style>
 <body>
+  <div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');">
   <header>
 <h1>Chips</h1>
 <h2> Alles wat je wil weten over chips</h2>
