--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ p {
    color: black;
    font-family: helvetica;
  }
+    ul {
+     text-align: center;
+ }
+   
   </style>
 <body>
   <div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');">
