--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ p {
  <p>De eenvoudigste manier om chips te maken, is door aardappelen in schijfjes te snijden, en die schijfjes te bakken of te frituren. De aardappelen kunnen van tevoren licht voorgekookt zijn. Na het bakken kunnen ze met wat zout geconsumeerd worden.</p>
 <h3> smaken chips</h3>
   <ul>
-    <li><a href="#">Smaken Chips</a></li>
+    <li><a href="https://lays.be/nl/assortiment/lays-chips">Smaken Chips</a></li>
    </ul>
  <h4> Naturel</h4>
  <p>De meest gegeten smaak chips ter wereld, maar ook niet  echt iets bijzonders</p>
