--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 }
     div {
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');
-      background-repeat: repeat-x;
-      background-repeat: repeat-y;
+      background-repeat: no-repeat;
 }
 
 p {
