--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ p {
 }
  body {
    text-align: center;
+   background-size: cover;
+   background-position: center;
  }
    color: black;
    font-family: helvetica;
