--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     div {
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');
       background-repeat: no-repeat;
+      background-size: cover;
+   background-position: center;
 }
 
 p {
