--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ p {
    
   </style>
 <body>
-  <div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Potato-Chips.jpg/266px-Potato-Chips.jpg');">
+  <div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/69/Potato-Chips.jpg');">
   <header>
 <h1>Chips</h1>
 <h2> Alles wat je wil weten over chips</h2>
@@ -43,19 +43,6 @@ p {
   <h4>paprika</h4>
   <p> nederderlanders eten de meeste paprika chips van alle landen<p>
   <h4> bolognese</h4>
-  <p></p>
-     <p></p>
-     <p></p>
-    <p></p> 
-    <p></p> 
-    <p></p> 
-    <p></p>
-     <p></p> 
-    <p></p>
-     <p></p>
-     <p></p>
-     <p></p>
-     <p></p>
-    
+
 <body>
 <html>
