--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ p {
   <div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/69/Potato-Chips.jpg');">
   <header>
 <h1>Chips</h1>
-<li><a href="https://lays.be/nl/assortiment/lays-chips">Alles wat je wil weten over chips</a></li>
+<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Alles wat je wil weten over chips</a></li>
 <h3>Hoe word chips gemaakt</h3>
  <p>De eenvoudigste manier om chips te maken, is door aardappelen in schijfjes te snijden, en die schijfjes te bakken of te frituren. De aardappelen kunnen van tevoren licht voorgekookt zijn. Na het bakken kunnen ze met wat zout geconsumeerd worden.</p>
 <h3> smaken chips</h3>
   <ul>
-    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Smaken Chips</a></li>
+    <li><a href="https://lays.be/nl/assortiment/lays-chips">Alles wat je wil weten over chip">Smaken Chips</a></li>
    </ul>
  <h4> Naturel</h4>
  <p>De meest gegeten smaak chips ter wereld, maar ook niet  echt iets bijzonders</p>
